--- a/src/Resources/views/AdminBundle/Customer/Show/gdpr.html.twig
+++ b/src/Resources/views/AdminBundle/Customer/Show/gdpr.html.twig
@@ -1,11 +1,15 @@
-<div class="content">
+<div class="content row">
     <h2>{{ 'sylius.ui.admin.synolia_gdpr.customer.gdpr_title'|trans }}</h2>
-    <a
-        href="{{ path('synolia_sylius_gdpr_admin_anonymize_customer', {'id': customer.id}) }}"
-        class="ui labeled icon button black"
-    ><i class="icon user secret"></i>{{ 'sylius.ui.admin.synolia_gdpr.customer.anonymize'|trans }}</a>
-    <a
-        href="{{ path('synolia_sylius_gdpr_admin_export_customer_datas', {'id': customer.id}) }}"
-        class="ui labeled icon button blue"
-    ><i class="file icon"></i>{{ 'sylius.ui.admin.synolia_gdpr.customer.export_data'|trans }}</a>
+
+    <div class="ui buttons">
+        <form class="form-inline row" action="{{ path('synolia_sylius_gdpr_admin_anonymize_customer', {'id': customer.id}) }}" method="post">
+            <button class="ui labeled icon button black" type="submit" data-requires-confirmation >
+                <i class="icon user secret"></i>{{ 'sylius.ui.admin.synolia_gdpr.customer.anonymize'|trans }}
+            </button>
+        </form>
+        <a
+            href="{{ path('synolia_sylius_gdpr_admin_export_customer_datas', {'id': customer.id}) }}"
+            class="ui labeled icon button blue"
+        ><i class="file icon"></i>{{ 'sylius.ui.admin.synolia_gdpr.customer.export_data'|trans }}</a>
+    </div>
 </div>
