requirement rbac for sylius plus

--- a/src/Resources/views/AdminBundle/Customer/Show/gdpr.html.twig
+++ b/src/Resources/views/AdminBundle/Customer/Show/gdpr.html.twig
@@ -1,3 +1,5 @@
+{% if sylius_plus_rbac_has_permission("synolia_sylius_gdpr_admin_anonymize_customer") or
+    sylius_plus_rbac_has_permission("synolia_sylius_gdpr_admin_export_customer_datas") %}
 <div class="content row">
     <h2>{{ 'sylius.ui.admin.synolia_gdpr.customer.gdpr_title'|trans }}</h2>
 
@@ -13,3 +15,4 @@
         ><i class="file icon"></i>{{ 'sylius.ui.admin.synolia_gdpr.customer.export_data'|trans }}</a>
     </div>
 </div>
+{% endif %}
