Apply suggestions from code review
Co-authored-by: Maxime Pereira-Lima <7437661+maxperei@users.noreply.github.com>

--- a/src/Resources/views/Admin/Customer/Show/gdpr.html.twig
+++ b/src/Resources/views/Admin/Customer/Show/gdpr.html.twig
@@ -16,9 +16,12 @@
                     </button>
                 </form>
                 <a
-                        href="{{ path('synolia_sylius_gdpr_admin_export_customer_data', {'id': customer.id}) }}"
-                        class="btn btn-primary"
-                >{{ ux_icon('tabler:database-export') }}{{ 'sylius.ui.admin.synolia_gdpr.customer.export_data'|trans }}</a>
+                    href="{{ path('synolia_sylius_gdpr_admin_export_customer_data', {'id': customer.id}) }}"
+                    class="btn btn-primary"
+                >
+                    {{ ux_icon('tabler:database-export') }}
+                    {{ 'sylius.ui.admin.synolia_gdpr.customer.export_data'|trans }}
+                </a>
             </div>
         </div>
     </div>
